dataset1235/2025-2/1153765216/users/260676580/executions/2747719322_4233865845.log
== SUBMISSION (2025-08-21 17:47:56)
-- CODE: 
TempC = float(input("Temperatura em Celsius"))

TempF = TempC*9/5+32

print(round(TempF,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Celsius-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Celsius14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Celsius212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Celsius68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Celsius32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Celsius86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:22:22)
-- CODE: 
TempC = float(input("Temperatura em Celsius"))

TempF = TempC*9/5+32

print(round(TempF,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Celsius-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Celsius14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Celsius212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Celsius68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Celsius32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Celsius86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:21:56)
-- CODE: 
TempC = float(input(Temperatura em Celsius))

  TempF = TempC*9/5+32

print(round(TempF,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 1
    TempC = float(input(Temperatura em Celsius))
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 1
    TempC = float(input(Temperatura em Celsius))
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 1
    TempC = float(input(Temperatura em Celsius))
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 1
    TempC = float(input(Temperatura em Celsius))
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 1
    TempC = float(input(Temperatura em Celsius))
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 1
    TempC = float(input(Temperatura em Celsius))
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:22:39)
-- CODE: 
TempC = float(input("Temperatura em Celsius"))

TempF = TempC*9/5+32

print(round(TempF,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Celsius-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Celsius14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Celsius212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Celsius68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Celsius32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Celsius86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 17:47:54)
-- CODE: 
TempC = float(input("Temperatura em Celsius"))

TempF = TempC*9/5+32

print(round(TempF,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Celsius-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Celsius14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Celsius212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Celsius68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Celsius32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Celsius86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
